--- a/software/software.ioc
+++ b/software/software.ioc
@@ -6,9 +6,11 @@ ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTIMER_TASK_PRIORITY,configUSE_NEWLIB_REENTRANT,FootprintOK
+FREERTOS.HEAP_NUMBER=4
+FREERTOS.IPParameters=Tasks01,configTIMER_TASK_PRIORITY,configUSE_NEWLIB_REENTRANT,FootprintOK,configTOTAL_HEAP_SIZE,HEAP_NUMBER
 FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTIMER_TASK_PRIORITY=5
+FREERTOS.configTOTAL_HEAP_SIZE=0x8000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -32,26 +34,30 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin19=VP_SYS_VS_tim1
+Mcu.Pin10=PB10
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=21
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -76,7 +82,7 @@ NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USART1_RX_NUCLEO_D2
+PA10.GPIO_Label=USART1_RX_D2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
@@ -90,47 +96,63 @@ PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=USART_TX_NUCLEO_D1
+PA2.GPIO_Label=USART_TX_D1
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=USART_RX_NUCLEO_D0
+PA3.GPIO_Label=USART_RX_D0
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.GPIOParameters=PinState,GPIO_Label
-PA5.GPIO_Label=LED_GREEN_NUCLEO_D13
+PA5.GPIO_Label=LED_GREEN_D13
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=SONIC_TRIG_NUCLEO_D12
-PA6.Locked=true
-PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=SONIC_ECHO_NUCLEO_D11
+PA7.GPIO_Label=SON_TRIG_R_D11
 PA7.Locked=true
-PA7.Signal=GPIO_Input
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SON_TRIG_C_D7
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USART1_TX_NUCLEO_D8
+PA9.GPIO_Label=USART1_TX_D8
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=PHOTORES_NUCLEO_A3
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=SON_ECHO_C_D6
+PB10.Locked=true
+PB10.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=SON_TRIG_L_D5
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SON_ECHO_L_D4
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SON_ECHO_R_D10
+PB6.Locked=true
+PB6.Signal=GPIO_Input
 PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=I2C1_SCL_NUCLEO_D15
+PB8.GPIO_Label=I2C1_SCL_D15
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=I2C1_SDA_NUCLEO_D14
+PB9.GPIO_Label=I2C1_SDA_D14
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
